# stack-collections.rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
array/: Cargo.toml  README.md
array/src/: lib.rs
btree-map/: Cargo.toml
btree-map/src/: lib.rs
btree-set/: Cargo.toml
hash-map/: Cargo.toml
hash-set/: Cargo.toml
stack-alloc/: Cargo.toml
stack-alloc/src/: main.rs
stack-array/: Cargo.toml  README.md
stack-array/src/: drain.rs  interface.rs  lib.rs  partial_eq.rs  retain_mut.rs  vector.rs  write.rs
stack-array/tests/: test.rs
