[package]
name = "btree-map"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A data structure for storing and manipulating fixed number of elements of a specific type."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stack-array = { path = "../array", version = "0.1.0" }