[package]
name = "btree-map"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A data structure for storing and manipulating fixed number of elements of a specific type."
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/stack-collections"

[dependencies]
stack-array = { path = "../stack-array", version = "0.1.0" }